[gd_scene load_steps=4 format=3 uid="uid://xjvq3x82cr55"]

[ext_resource type="Script" path="res://Scripts/joke_componnent.gd" id="1_cai6b"]
[ext_resource type="Texture2D" uid="uid://bkbdeieiryswt" path="res://icon.svg" id="2_6sokm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kx5i2"]
size = Vector2(130, 130)

[node name="joke_componnent" type="Node2D"]
script = ExtResource("1_cai6b")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(544, 228)
texture = ExtResource("2_6sokm")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(544, 226)
shape = SubResource("RectangleShape2D_kx5i2")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
